Updated scripts and tmpl

--- a/root/.chezmoiscripts/linux/run_once_before_install-000-aur-helper.sh.tmpl
+++ b/root/.chezmoiscripts/linux/run_once_before_install-000-aur-helper.sh.tmpl
@@ -1,6 +1,12 @@
+{{ if (and (not .ephemeral) (not .headless)) -}}
+
+{{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
 sudo pacman -Syy --needed git base-devel
 git clone https://aur.archlinux.org/yay.git
 cd yay || exit 1
 makepkg -si
+{{      end -}}
+
+{{ end -}}
