--- a/root/.chezmoiscripts/linux/run_once_before_install-thunar.sh.tmpl
+++ b/root/.chezmoiscripts/linux/run_once_before_install-thunar.sh.tmpl
@@ -1,3 +1,6 @@
+{{ if (and (not .ephemeral) (not .headless)) -}}
+
+{{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
 yay -S --noconfirm \
@@ -5,3 +8,6 @@ yay -S --noconfirm \
   thunar-archive-plugin \
   thunar-media-tags-plugin \
   thunar-volman
+{{      end -}}
+
+{{ end -}}
