Add git configuration files
This commit adds the following git configuration files:
- `config.tmpl`: Contains various git aliases and settings.
- `config.user.tmpl`: Sets the user's name and email for git.
- `ignore`: Specifies files and directories to ignore in git.

--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -158,12 +158,13 @@
   branch = false
   stash = false
 [include]
-  path = .gitconfig.user
-    {{- range $file := list "diff-merge-tools" "gui-config" }}
+  path = {{ .chezmoi.homeDir -}}
+    /.config/git/config.user
+  {{- range $file := list "diff-merge-tools" "gui-config" }}
   path = {{ $.chezmoi.homeDir -}}
     /.config/git/
     {{-   $file }}
-    {{- end }}
+  {{- end }}
 
 {{- /*
  vim:ft=gitconfig:
