Update polybar configuration files

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -27,12 +27,14 @@ set -eufo pipefail
   "flameshot"
   "graphicsmagick"
   "jq"
+  "neofetch"
   "pacman-contrib"
   "pamixer"
   "pavucontrol"
   "playerctl"
   "pulseaudio"
   "sxiv"
+  "w3m"
   "wmctrl"
   "yad"
 ) -}}
