Update package installation commands

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-compositor.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-compositor.sh.tmpl
@@ -3,7 +3,7 @@
 {{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
-sudo pacman -S --noconfirm picom
+yay -S --noconfirm --needed compfy
 {{      end -}}
 
 {{ end -}}
