--- a/home/.chezmoiscripts/linux/run_onchange_before_install-docker.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-docker.sh.tmpl
@@ -29,7 +29,7 @@ sudo usermod $USER --append --group docker
 
 #!/usr/bin/env sh
 
-sudo pacman -S --noconfirm docker
+sudo pacman -S --noconfirm --needed docker
 
 sudo systemctl enable docker.service
 
