--- a/home/.chezmoiscripts/linux/run_onchange_before_install-bluetooth.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-bluetooth.sh.tmpl
@@ -3,7 +3,7 @@
 {{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
-sudo pacman -S --noconfirm \
+sudo pacman -S --noconfirm --needed \
   bluez \
   blueman \
   bluez-tools
