--- a/home/.chezmoiscripts/linux/run_onchange_before_install-i3.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-i3.sh.tmpl
@@ -3,7 +3,7 @@
 {{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
-yay -S --noconfirm \
+yay -S --noconfirm --needed \
   i3-wm
 
 sudo pip3 install i3-layouts
