--- a/home/.chezmoiscripts/linux/run_onchange_before_install-jgmenu.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-jgmenu.sh.tmpl
@@ -3,7 +3,7 @@
 {{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
-sudo pacman -S --noconfirm jgmenu
+sudo pacman -S --noconfirm --needed jgmenu
 {{      end -}}
 
 {{ end -}}
