--- a/home/.chezmoiscripts/linux/run_onchange_before_install-polybar.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-polybar.sh.tmpl
@@ -3,7 +3,7 @@
 {{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
-sudo pacman -S --noconfirm polybar
+sudo pacman -S --noconfirm --needed polybar
 {{      end -}}
 
 {{ end -}}
