--- a/home/.chezmoiscripts/linux/run_onchange_before_install-ranger.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-ranger.sh.tmpl
@@ -1,7 +1,7 @@
 {{- if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
-yay -S --noconfirm \
+yay -S --noconfirm --needed \
   ranger \
   ueberzug
 {{- end -}}
