--- a/home/.chezmoiscripts/linux/run_onchange_before_install-rofi.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-rofi.sh.tmpl
@@ -3,7 +3,7 @@
 {{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
-yay -S --noconfirm \
+yay -S --noconfirm --needed \
   rofi \
   rofi-greenclip
 {{      end -}}
