--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -45,11 +45,15 @@
 {{-   $gitUserEmail = promptStringOnce . "gitUserEmail" "What is the email you use for git" -}}
 {{- end -}}
 
+[hooks.read-source-state.pre]
+    command = ".dotfiles/home/.hooks/.install-password-manager.sh"
+
 [data]
     docker = {{ $docker }}
     ephemeral = {{ $ephemeral }}
     headless = {{ $headless }}
     osid = {{ $osid | quote }}
+
 [data.gitconfig.user]
     name = {{ $gitUserName | quote }}
     email = {{ $gitUserEmail | quote }}
