--- a/home/.chezmoiscripts/linux/run_onchange_before_install-wpg.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-wpg.sh.tmpl
@@ -7,7 +7,7 @@ yay -S --noconfirm --needed \
   feh \
   python-pywal
 
-sudo pip3 install wpgtk
+pip3 install --user --upgrade wpgtk
 {{      end -}}
 
 {{ end -}}
