Ignore .config/credentials directory in chezmoi

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -2,6 +2,7 @@
 .chezmoiscripts/linux/**
 .clamtk/**
 .ssh/**
+.config/credentials/**
 {{- end -}}
 
 {{- if eq .chezmoi.os "linux" -}}
@@ -19,5 +20,6 @@
 .config/xfce4/**
 .config/compfy.conf
 .ssh/**
+.config/credentials/**
 {{-   end -}}
 {{- end -}}
