Update file paths and configurations

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-ranger.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-ranger.sh.tmpl
@@ -6,6 +6,6 @@ yay -S --noconfirm --needed \
   ueberzug \
   ranger_devicons-git
 
-mkdir -p ${XDG_CONFIG_HOME:-$HOME/.config}/ranger/plugins
-ln -fsT /usr/share/ranger/plugins/ranger_devicons ${XDG_CONFIG_HOME:-$HOME/.config}/ranger/plugins/ranger_devicons
+mkdir -p ~/.config/ranger/plugins
+ln -fsT /usr/share/ranger/plugins/ranger_devicons ~/.config/ranger/plugins/ranger_devicons
 {{- end -}}
