--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -18,7 +18,7 @@
 .config/rofi/**
 .config/wpg/**
 .config/xfce4/**
-.config/compfy.conf
+.config/picom.conf
 .ssh/**
 .config/credentials/**
 {{-   end -}}
