--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -27,7 +27,7 @@
   snapshots = !git stash list --grep snapshot
 
   #via http://stackoverflow.com/questions/5188320/how-can-i-get-a-list-of-git-branches-ordered-by-most-recent-commit
-  recent-branches = !git for-each-ref --count=15 --sort=-committerdate refs/heads/ --format='%(refname:short)'
+  recent-branches = !git for-each-ref --count=15 --sort=-committerdate refs/heads/ --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\"
 
   # branch
   b = branch -v                     # branch (verbose)
@@ -106,6 +106,8 @@
   # checkout remote head, via https://twitter.com/jnesselr/status/1334586152691625985
   cdef = "!f() { git checkout $(git originhead ${1:-origin}); } ; f"
   originhead = "!f() { git remote show ${1:-origin} | grep 'HEAD branch' | cut -d ' ' -f5; } ; f"
+[init]
+	defaultBranch = main
 [format]
   pretty = format:%C(blue)%ad%C(reset) %C(yellow)%h%C(green)%d%C(reset) %C(blue)%s %C(magenta) [%an]%C(reset)
 [mergetool]
