Add Openbox themes and Visual Studio Code to package list

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -15,6 +15,8 @@ set -eufo pipefail
 
 {{ if not .headless -}}
 {{ $aurPackages = concat $aurPackages (list
+  "arc-dark-osx-openbox-theme-git"
+  "openbox-arc-git"
   "visual-studio-code-bin"
 ) -}}
 {{ end -}}
