--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -4,6 +4,7 @@
 {{- $docker := false -}}{{/* true if this machine should have Docker installed */}}
 {{- $ephemeral := false -}}{{/* true if this machine is ephemeral, e.g. a cloud or VM instance */}}
 {{- $headless := false -}}{{/* true if this machine does not have a screen and keyboard */}}
+{{- $personal := false -}}{{/* true if this machine should have personal secrets */}}
 {{- "" -}}
 
 {{- $osid := .chezmoi.os -}}
@@ -17,8 +18,15 @@
 {{-   $headless = true -}}
 {{- end -}}
 
-{{- if eq .chezmoi.os "windows" -}}
-{{-   $ephemeral = true -}}
+{{/* work around unreliable hostname on darwin */}}
+{{- $hostname := .chezmoi.hostname -}}
+{{- if eq .chezmoi.os "darwin" -}}
+{{-   $computerName := output "scutil" "--get" "ComputerName" | trim -}}
+{{-   if eq $computerName "Uli’s MacBook Air" -}}
+{{-     $hostname = "ulis-mba" -}}
+{{-   else -}}
+{{-     $hostname = $computerName -}}
+{{-   end -}}
 {{- end -}}
 
 {{- if eq .chezmoi.os "windows" -}}
@@ -26,7 +34,10 @@
 {{- end -}}
 
 {{- if not $ephemeral -}}
-{{-   if $interactive -}}
+{{-   if eq $hostname "hornero" -}}
+{{-     $personal = true -}}
+{{-     $docker = true -}}
+{{-   else if $interactive -}}
 {{-     $headless = promptBoolOnce . "headless" "headless" -}}
 {{-     $ephemeral = promptBoolOnce . "ephemeral" "ephemeral" -}}
 {{-     if not $ephemeral -}}
@@ -49,7 +60,9 @@
     docker = {{ $docker }}
     ephemeral = {{ $ephemeral }}
     headless = {{ $headless }}
+    hostname = {{ $hostname | quote }}
     osid = {{ $osid | quote }}
+    personal = {{ $personal }}
 
 [data.gitconfig.user]
     name = {{ $gitUserName | quote }}
