Add btop package and update cava config gradient colors

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -25,6 +25,7 @@ set -eufo pipefail
 {{ $packages = concat $packages (list
   "arc-gtk-theme"
   "arandr"
+  "btop"
   "dbus-python"
   "flameshot"
   "graphicsmagick"
