--- a/home/.chezmoiscripts/linux/run_onchange_before_install-xfce4.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-xfce4.sh.tmpl
@@ -7,6 +7,7 @@ yay -S --noconfirm --needed \
   exo \
   libxfce4ui \
   libxfce4util \
+  xdg-user-dirs \
   xfce4-settings \
   xfce4-xkb-plugin \
   xfconf \
