--- a/home/dot_zsh_aliases.tmpl
+++ b/home/dot_zsh_aliases.tmpl
@@ -33,7 +33,7 @@ alias cat=batcat
 alias l='exa -lah'
 alias la='exa -lAh'
 alias ll='exa -lh'
-alias ls='exa --color=tty'
+alias ls='exa --color=auto'
 alias lsa='exa -lah'
 {{- else if lookPath "lsd" }}
 alias l='lsd -lah'
