--- a/home/private_dot_config/eww/dashboard/scripts/executable_mails.tmpl
+++ b/home/private_dot_config/eww/dashboard/scripts/executable_mails.tmpl
@@ -3,9 +3,9 @@
 import imaplib
 obj = imaplib.IMAP4_SSL('imap.gmail.com', 993)
 {{ if .personal }}
-obj.login('{{ .email.account.email }}', '{{ (index (lastpassRaw "google_apps_password") 0).note }}')
+obj.login('{{ .profile.user.email }}', '{{ (index (lastpassRaw "google_apps_password") 0).note }}')
 {{ else }}
-obj.login('{{ .email.account.email }}','PASSWORD')
+obj.login('{{ .profile.user.email }}','PASSWORD')
 {{ end }}
 obj.select()
 print(len(obj.search(None, 'UnSeen')[1][0].split()))
