Update dependencies and autostart configurations

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-xdg.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-xdg.tmpl
@@ -4,15 +4,9 @@
 #!/usr/bin/env bash
 
 yay -S --noconfirm --needed \
-  libxfce4ui \
-  libxfce4util \
-  xfce4-settings \
-  xfce4-xkb-plugin \
-  xfconf \
-  xfce4-polkit \
-  xfce4-notifyd \
-  xfce4-power-manager \
-  xfce4-screenshooter
+  exo \
+  xdg-autostart \
+  xdg-user-dirs
 {{      end -}}
 
 {{ end -}}
