Update last updated by field in eww.yuck.tmpl

--- a/home/dot_config/eww/dashboard/eww.yuck.tmpl
+++ b/home/dot_config/eww/dashboard/eww.yuck.tmpl
@@ -2,6 +2,7 @@
 ;; ** Widgets config for EWW
 ;; ** Created by : @adi1090x
 ;; ** Converted by : @tripleo1
+;; ** Last updated by : @ulises-jeremias
 ;; **
 
 ;; ** Variables ***********************************************************************
