--- a/home/dot_config/eww/dashboard/eww.yuck.tmpl
+++ b/home/dot_config/eww/dashboard/eww.yuck.tmpl
@@ -221,91 +221,91 @@
 
 
 ;; background
-(defwindow background :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-background :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 0 :y 0 :width "1920px" :height "1080px")
 					(bg))
 
 ;; profile
-(defwindow profile :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-profile :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 150 :y 150 :width 350 :height 440)
 					(user))
 
 ;; system
-(defwindow system :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-system :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 150 :y 605 :width 350 :height 325)
 					(system))
 
 ;; clock
-(defwindow clock :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-clock :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 515 :y 150 :width 350 :height 155)
 					(clock))
 
 ;; uptime
-(defwindow uptime :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-uptime :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 515 :y 320 :width 350 :height 155)
 					(uptime))
 
 ;; music
-(defwindow music :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-music :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 515 :y 490 :width 610 :height 280)
 					(music))
 
 ;; github
-(defwindow github :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-github :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 515 :y 785 :width 141 :height 145)
 					(github))
 
 ;; reddit
-(defwindow reddit :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-reddit :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 671 :y 785 :width 141 :height 145)
 					(reddit))
 
 ;; twitter
-(defwindow twitter :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-twitter :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 827 :y 785 :width 141 :height 145)
 					(twitter))
 
 ;; youtube
-(defwindow youtube :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-youtube :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 983 :y 785 :width 142 :height 145)
 					(youtube))
 
 ;; weather
-(defwindow weather :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-weather :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 880 :y 150 :width 550 :height 325)
 					(weather))
 
 ;; apps
-(defwindow apps :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-apps :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 1140 :y 490 :width 290 :height 280)
 					(apps))
 
 ;; mail
-(defwindow mail :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-mail :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 1140 :y 785 :width 290 :height 145)
 					(mail))
 
 ;; logout
-(defwindow logout :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-logout :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 1445 :y 150 :width 155 :height 155)
 					(logout))
 
 ;; sleep
-(defwindow sleep :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-sleep :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 1615 :y 150 :width 155 :height 155)
 					(sleep))
 
 ;; reboot
-(defwindow reboot :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-reboot :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 1445 :y 320 :width 155 :height 155)
 					(reboot))
 
 ;; poweroff
-(defwindow poweroff :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-poweroff :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 1615 :y 320 :width 155 :height 155)
 					(poweroff))
 
 ;; folders
-(defwindow folders :stacking "fg" :focusable "false" :screen 1
+(defwindow dashboard-folders :stacking "fg" :focusable "false" :screen 1
 	    :geometry (geometry :x 1445 :y 490 :width 325 :height 440)
 					(folders))
